More 1.10.2 updates